Fix autoconfiguration and other things for SB 3